<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_dark">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="48dip"
        android:background="@color/bg_card">
        <TextView
            android:id="@+id/tab_hot"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tab_hot"
            android:textColor="@color/accent_pink"
            android:textSize="16sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tab_search"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tab_search"
            android:textColor="@color/text_secondary"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/tab_about"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tab_about"
            android:textColor="@color/text_secondary"
            android:textSize="16sp" />
    </LinearLayout>

    <ViewFlipper
        android:id="@+id/view_flipper"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <ListView
                android:id="@+id/list_hot"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:cacheColorHint="#00000000"
                android:divider="#22000000"
                android:dividerHeight="1dip" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="12dip">
            <EditText
                android:id="@+id/et_search"
                android:layout_width="fill_parent"
                android:layout_height="44dip"
                android:background="@color/bg_card"
                android:textColor="@color/text_primary"
                android:textColorHint="@color/text_hint"
                android:hint="@string/search_hint"
                android:paddingLeft="12dip"
                android:singleLine="true"
                android:imeOptions="actionSearch" />
            <Button
                android:id="@+id/btn_search"
                android:layout_width="fill_parent"
                android:layout_height="44dip"
                android:layout_marginTop="8dip"
                android:text="@string/tab_search"
                android:textColor="@color/text_primary"
                android:background="@color/accent_blue" />
            <ListView
                android:id="@+id/list_search"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="8dip"
                android:cacheColorHint="#00000000"
                android:divider="#22000000"
                android:dividerHeight="1dip" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:padding="24dip">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/accent_pink"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginBottom="16dip" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_text"
                android:textColor="@color/text_secondary"
                android:textSize="14sp"
                android:gravity="center"
                android:lineSpacingMultiplier="1.5"
                android:layout_marginBottom="24dip" />
            <Button
                android:id="@+id/btn_about_update"
                android:layout_width="200dip"
                android:layout_height="44dip"
                android:text="@string/check_update"
                android:textColor="@color/text_primary"
                android:background="@color/accent_blue" />
        </LinearLayout>

    </ViewFlipper>
</LinearLayout>
